# parallel_INM

./: CMakeLists.txt  README.md  Report.ipynb  build.sh  mvm.c  practica-mvm.txt  qs_mix  qs_mpi  qs_omp  res1152_mix  res1152_mpi  res1152_omp  res9216_mix  res9216_mpi  res9216_omp
MPI-build/: build.sh
OMP-build/: build.sh
hybrid-build/: build.sh
